ft: menu, chat service, llm, upgrades,

--- a/alembic.ini
+++ b/alembic.ini
@@ -34,7 +34,8 @@ version_locations = %(here)s/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
-version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
+# Use os.pathsep. Default configuration used for new projects
+version_path_separator = os
 
 # set to 'true' to search source files recursively
 # in each "version_locations" directory
