--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,9 @@ click==8.1.7
 tabulate==0.9.0
 rich==13.7.0
 
+# ============== TELEGRAM ==============
+python-telegram-bot==21.0
+
 # ============== TESTING ==============
 pytest==8.0.0
 pytest-asyncio==0.23.4
